2015-06-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.4 released.

2015-06-18  Carl Hetherington  <cth@carlh.net>

	* Fixes to Linux .desktop files.

	* Stop playback when we reach the end of the film.

2015-06-16  c.hetherington  <cth@carlh.net>

	* Prevent selection of fewer DCP channels than
	are present in the output of an active processor (#611).

2015-06-15  Carl Hetherington  <cth@carlh.net>

	* Select newly-added content (#455).

2015-06-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.3 released.

2015-06-14  Carl Hetherington  <cth@carlh.net>

	* Fix parsing of .srt files with a Unicode
	byte-order-mark.

	* Add buttons to set trim from current `playhead'
	position (#372).

2015-06-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.2 released.

2015-06-13  Carl Hetherington  <cth@carlh.net>

	* Fix i18n.

	* Version 2.1.1 released.

2015-06-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.0 released.

2015-06-13  Carl Hetherington  <cth@carlh.net>

	* Make ru_RU translation actually work.

	* Update progress bar (sort-of) when finding subtitles (#603).

	* Make sure audio mapping view is scrollable when necessary (#597).

2015-06-12  Carl Hetherington  <cth@carlh.net>

	* Add a close button to the audio plot on Linux (#602).

	* Version 2.0.51 released.

2015-06-12  Carl Hetherington  <cth@carlh.net>

	* New ru_RU translation from Igor Voytovich.

2015-06-12  c.hetherington  <cth@carlh.net>

	* Fix for every audio stream being mapped to the DCP when loading
	old films.

2015-06-11  c.hetherington  <cth@carlh.net>

	* Fix massive slowdown of direct J2K->DCP encodes (#599).

	* Fix hang on audio analysis in some cases (#598).

	* Fix never-ending encode when XYZ values are clamped (#600).

2015-06-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.50 released.

2015-06-10  c.hetherington  <cth@carlh.net>

	* Skip audio analysis when there is no audio content (#596).

2015-06-09  Carl Hetherington  <cth@carlh.net>
