@@ -1,3 +1,8 @@
+2015-06-18  c.hetherington  <cth@carlh.net>
+
+	* Fix audio channel counts in DCP names when
+	processors are in use (#609).
+
 2015-06-18  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.1.4 released.
